--- a/basics/java/dom.html
+++ b/basics/java/dom.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom learn</title>
+    <style>
+        .bgcolor{
+            background-color: black;
+            color: beige;
+        }
+    </style>
 </head>
 <body>
-    <div class="bg-orange">
-    <h1 class ="heading">dom basics needed</h1>
-   <p>loreum ipsum dolor sit amet fdues say</p>
+    <div class="bgcolor">
+    <h1 id  = 'title' class ="heading">dom basics needed
+        <span style ="display: none;">test text</span>
+    </h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+   <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, vitae tenetur! Dolore quibusdam nisi atque, iusto dolores porro sapiente ipsa assumenda, sunt sint cupiditate saepe corrupti, officiis repudiandae. Similique, maxime!
+   </p>
 </div>
 </body>
 </html>
+/*
+document.querySelector('h1')
+document.querySelector('h2')
+document.getElementById('title')
+
+
+
+
+
+*/
