--- a/basics/java/dom.html
+++ b/basics/java/dom.html
@@ -20,6 +20,7 @@
    <p>
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, vitae tenetur! Dolore quibusdam nisi atque, iusto dolores porro sapiente ipsa assumenda, sunt sint cupiditate saepe corrupti, officiis repudiandae. Similique, maxime!
    </p>
+   <input type="password" name="text" id="">
 </div>
 </body>
 </html>
