--- a/basics/java/4.html
+++ b/basics/java/4.html
@@ -30,5 +30,9 @@ function addOpti(langname){
     li.appendChild(document.createTextNode(langname).appendChild(li))
 }
 addOpti('golang')
+//edit
+const sec =document.querySelector("li:nth-child(2)")
+console.log(sec);
+
 </script>
 </html>
